--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/owl.carousel.min.css">
-    <link rel="stylesheet" href="./css/owl.theme.default.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
@@ -50,7 +48,7 @@
     <main>
         <section class="heroImage">
             <div class="main-slider">
-                <div class="main-slide " style="background-image: url('./img/page1.svg');">
+                <div class="main-slide " style="background-image: url('./images/dest/page1.svg');">
                     <div class="main-slide-content">
                         <div class="page-1-str-1">PLAN YOUR LIFE</div>
                         <div class="page-1-str-2">Increase your <strong>productivity</strong></div> 
@@ -113,7 +111,7 @@
         </section>
 
         <section class="page__3 " >
-            <div class="page__3_container container" style="background-image: url('./img/clouds_page_3.svg'); ">
+            <div class="page__3_container container" style="background-image: url('./images/dest/clouds_page_3.svg'); ">
                 <div class="page__3-content">
 
                     <div class="page__3-str-1">ABOUT US</div> 
@@ -278,10 +276,6 @@
         </section>
     </main>
 
-    
-
 </body>
 
-<script src="./js/jquery.min.js"></script>
-<script src="./js/owl.carousel.min.js"></script>
 </html>
